[package]
authors = ["Jordan Aceto <jordanaceto@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "micro-ox"
version = "0.1.0"

[dependencies]
panic-halt = "0.2"
cortex-m = "0.7"
cortex-m-rt = "0.7"
stm32l4xx-hal = { version = "0.7.1", features = ["stm32l412"] }
heapless = "0.7.16"
nb = "1.0.0"
biquad = "0.4.2"
synth-utils = "0.1.1"

# this lets you use `cargo fix`!
[[bin]]
name = "micro-ox"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
lto = true # better optimizations
opt-level = "z"
debug = true
